<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:visible="true"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:visible="false"/>

        <item
            android:id="@+id/nav_purchase_history"
            android:title="@string/purchase_history"
            android:visible="false"/>

        <item
            android:id="@+id/nav_wishlist"
            android:title="@string/my_wishlist"
            android:visible="false"/>

        <item
            android:id="@+id/nav_language"
            android:title="@string/language"
            android:visible="true"/>

        <item
            android:id="@+id/nav_sign_in"
            app:actionLayout="@layout/button_nav_signin"
            tools:ignore="MenuTitle"
            android:visible="false"/>

        <item
            android:id="@+id/nav_logout"
            app:actionLayout="@layout/button_logout"
            tools:ignore="MenuTitle"
            android:visible="false"/>

    </group>

</menu>
