<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:elevation="@dimen/_5sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/bg_curved_window_tiny"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_message"
            style="@style/MediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/sort_products"
            android:textAlignment="textStart"
            android:textColor="?txtPrimary"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp" />

        <RadioGroup
            android:id="@+id/rd_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rd_default"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:buttonTint="?bgGreyShadow"
                android:padding="@dimen/_5sdp"
                android:text="@string/default_"
                android:textAlignment="viewStart"
                android:textColor="?txtPrimary"
                android:checked="true"
                android:textSize="@dimen/_11ssp" />

            <RadioButton
                android:id="@+id/rd_price_high_to_low"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:buttonTint="?bgGreyShadow"
                android:padding="@dimen/_5sdp"
                android:text="@string/price_high_to_low"
                android:textAlignment="viewStart"
                android:textColor="?txtPrimary"
                android:textSize="@dimen/_11ssp" />

            <RadioButton
                android:id="@+id/rd_price_low_to_high"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:buttonTint="?bgGreyShadow"
                android:padding="@dimen/_5sdp"
                android:text="@string/Price_low_to_high"
                android:textAlignment="viewStart"
                android:textColor="?txtPrimary"
                android:textSize="@dimen/_11ssp" />

            <RadioButton
                android:id="@+id/rd_newarival"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:buttonTint="?bgGreyShadow"
                android:padding="@dimen/_5sdp"
                android:text="@string/new_arrival"
                android:textAlignment="viewStart"
                android:textColor="?txtPrimary"
                android:textSize="@dimen/_11ssp" />

            <RadioButton
                android:id="@+id/rd_popularity"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:buttonTint="?bgGreyShadow"
                android:padding="@dimen/_5sdp"
                android:text="@string/popularity"
                android:textAlignment="viewStart"
                android:textColor="?txtPrimary"
                android:textSize="@dimen/_11ssp" />

            <RadioButton
                android:id="@+id/rd_toprated"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:buttonTint="?bgGreyShadow"
                android:padding="@dimen/_5sdp"
                android:text="@string/top_rated"
                android:textAlignment="viewStart"
                android:textColor="?txtPrimary"
                android:textSize="@dimen/_11ssp" />

        </RadioGroup>


        <TextView
            android:id="@+id/tv_close"
            style="@style/MediumText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:padding="@dimen/_10sdp"
            android:text="@string/close"
            android:textColor="?txtPrimary"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

</RelativeLayout>